sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:6: error: value \ is not a member of Int
while(ecart > 1 \ x==true){
                ^AlgCombSort:9: error: value tolnt is not a member of Double
		ecart = (ecart.toDouble / 1.3) tolnt 
                                               ^